--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header h1 {
 }
 
 main {
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
   padding-top: 20px;
 }
@@ -33,6 +33,7 @@ main {
 h2 {
   font-size: 1.8rem;
   color: #333;
+  margin-bottom: 10px;
 }
 
 form {
@@ -79,4 +80,10 @@ footer {
   margin-top: 20px;
   font-size: 0.9rem;
   color: #777;
+}
+
+#mapid {
+  height: 400px;
+  width: 100%;
+  border-radius: 8px;
 }
